--- a/_modules/iceprod/server/dbmethods/auth.html
+++ b/_modules/iceprod/server/dbmethods/auth.html
@@ -131,7 +131,7 @@
 
 <span class="kn">from</span> <span class="nn">iceprod.core.dataclasses</span> <span class="k">import</span> <span class="n">Number</span><span class="p">,</span><span class="n">String</span>
 
-<span class="kn">from</span> <span class="nn">iceprod.server.dbmethods</span> <span class="k">import</span> <span class="n">_Methods_Base</span><span class="p">,</span><span class="n">datetime2str</span><span class="p">,</span><span class="n">str2datetime</span><span class="p">,</span><span class="n">nowstr</span>
+<span class="kn">from</span> <span class="nn">iceprod.server.dbmethods</span> <span class="k">import</span> <span class="n">_Methods_Base</span><span class="p">,</span><span class="n">datetime2str</span><span class="p">,</span><span class="n">str2datetime</span><span class="p">,</span><span class="n">nowstr</span><span class="p">,</span><span class="n">memcache</span>
 
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s">&#39;dbmethods.auth&#39;</span><span class="p">)</span>
 
@@ -148,8 +148,9 @@
 <span class="sd">    Takes a handle to a subclass of iceprod.server.modules.db.DBAPI</span>
 <span class="sd">    as an argument.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+    <span class="nd">@memcache</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">4096</span><span class="p">,</span> <span class="n">ttl</span><span class="o">=</span><span class="mi">300</span><span class="p">)</span>
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="auth.auth_get_site_auth"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.auth_get_site_auth">[docs]</a>    <span class="k">def</span> <span class="nf">auth_get_site_auth</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">site_id</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">auth_get_site_auth</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">site_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Get the auth_key for the selected site.</span>
 
@@ -172,10 +173,11 @@
             <span class="c"># DB will return None if column is empty</span>
             <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;Row does not have both site and key&#39;</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">])</span></div>
+            <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">])</span>
 
+    <span class="nd">@memcache</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">4096</span><span class="p">,</span> <span class="n">ttl</span><span class="o">=</span><span class="mi">300</span><span class="p">)</span>
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="auth.auth_authorize_site"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.auth_authorize_site">[docs]</a>    <span class="k">def</span> <span class="nf">auth_authorize_site</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">site_id</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">auth_authorize_site</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">site_id</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Validate site and key for authorization.</span>
 
@@ -183,10 +185,11 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">auth_get_site_auth</span><span class="p">(</span><span class="n">site_id</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">key</span> <span class="o">!=</span> <span class="n">ret</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&quot;key does not match&quot;</span><span class="p">)</span></div>
+            <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&quot;key does not match&quot;</span><span class="p">)</span>
 
+    <span class="nd">@memcache</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">4096</span><span class="p">,</span> <span class="n">ttl</span><span class="o">=</span><span class="mi">300</span><span class="p">)</span>
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="auth.auth_authorize_task"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.auth_authorize_task">[docs]</a>    <span class="k">def</span> <span class="nf">auth_authorize_task</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">auth_authorize_task</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Validate key for authorization.</span>
 
@@ -210,7 +213,7 @@
             <span class="k">elif</span> <span class="n">d</span> <span class="o">&lt;</span> <span class="n">datetime</span><span class="o">.</span><span class="n">now</span><span class="p">():</span>
                 <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;Passkey is expired&#39;</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="k">True</span><span class="p">)</span></div>
+                <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="k">True</span><span class="p">)</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
 <div class="viewcode-block" id="auth.auth_new_passkey"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.auth_new_passkey">[docs]</a>    <span class="k">def</span> <span class="nf">auth_new_passkey</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">expiration</span><span class="o">=</span><span class="mi">3600</span><span class="p">,</span> <span class="n">user_id</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
@@ -230,8 +233,9 @@
         <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
         <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">passkey</span><span class="p">)</span></div>
 
+    <span class="nd">@memcache</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">65536</span><span class="p">,</span> <span class="n">ttl</span><span class="o">=</span><span class="mi">3600</span><span class="p">)</span>
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="auth.auth_get_passkey"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.auth_get_passkey">[docs]</a>    <span class="k">def</span> <span class="nf">auth_get_passkey</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">passkey</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">auth_get_passkey</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">passkey</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get the expiration datetime of a passkey&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">passkey</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;missing key&#39;</span><span class="p">)</span>
@@ -241,7 +245,7 @@
         <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
         <span class="k">if</span> <span class="p">(</span><span class="ow">not</span> <span class="n">ret</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="ow">not</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span> <span class="ow">or</span> <span class="ow">not</span> <span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]:</span>
             <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;get_passkey did not return a passkey&#39;</span><span class="p">)</span>
-        <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">str2datetime</span><span class="p">(</span><span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span></div>
+        <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">str2datetime</span><span class="p">(</span><span class="n">ret</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]))</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
 <div class="viewcode-block" id="auth.add_site_to_master"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.auth.auth.add_site_to_master">[docs]</a>    <span class="k">def</span> <span class="nf">add_site_to_master</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">site_id</span><span class="p">):</span>
